Fixed spacing

--- a/assets/frame.css
+++ b/assets/frame.css
@@ -18,6 +18,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: start;
+    flex-wrap: wrap;
+    row-gap: 0.5rem;
     padding: 1rem 0;
     background-color: var(--prime-bg-color);
     color: var(--prime-text-color);
@@ -56,6 +58,7 @@
 
 .heading-container {
     display: flex;
+    align-items: center;
     margin-left: 0.3rem;
 }
 
@@ -84,6 +87,7 @@
 .topnav,
 .menu {
     justify-content: end;
+    flex-wrap: wrap;
 }
 
 .menu,
@@ -91,6 +95,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    row-gap: 0.5rem;
     list-style: none;
     padding-left: 0;
     margin: 0.3rem 0;
